--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fluttertoast:
   http: ^0.12.2
   flutter_svg: ^0.19.0
+  flutter_secure_storage: ^3.3.3
   
 
 dev_dependencies:
@@ -52,8 +53,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
-    - assets/images/
-    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
