--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: ^0.12.2
   flutter_svg: ^0.19.0
   flutter_secure_storage: ^3.3.3
-  
+  web_socket_channel: ^1.2.0
 
 dev_dependencies:
   flutter_test:
