--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^0.19.0
   flutter_secure_storage: ^3.3.3
   web_socket_channel: ^1.2.0
+  flutter_socket_io: ^0.6.0
 
 dev_dependencies:
   flutter_test:
