--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_secure_storage: ^3.3.3
   web_socket_channel: ^1.2.0
   flutter_socket_io: ^0.6.0
+  url_launcher:
 
 dev_dependencies:
   flutter_test:
