--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
   http: ^0.12.2
   flutter_svg: ^0.19.0
   flutter_secure_storage: ^3.3.3
-  web_socket_channel: ^1.2.0
-  flutter_socket_io: ^0.6.0
   url_launcher:
+  barcode_scan: ^1.0.0
+  socket_io_client: ^0.9.12
 
 dev_dependencies:
   flutter_test:
