--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,20 @@ dependencies:
   barcode_scan: ^1.0.0
   socket_io_client: ^0.9.12
   webview_flutter: ^0.3.19+9
-
+  flutter_launcher_icons: ^0.7.3
+  flutter_launcher_name: ^0.0.1
 dev_dependencies:
   
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/playstore.png"
+
+flutter_launcher_name:
+  name: "Food Zone"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
